--- a/first-reactjs/public/index.html
+++ b/first-reactjs/public/index.html
@@ -14,5 +14,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script src="./bundle.js"></script>
+    
   </body>
 </html>
